--- a/TicTacProject/TicTacProject/TicTacProject.csproj
+++ b/TicTacProject/TicTacProject/TicTacProject.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="oyuncu.cs" />
     <Compile Include="oyunTahtasi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
